# mlwp-data-specs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  pypi-release.yml
docs/: __init__.py  index.md  mkdocs.yml
docs/scripts/: __init__.py  generate_trait_docs.py
src/mlwp_data_specs/: __init__.py  api.py
src/mlwp_data_specs/checks/: __init__.py
src/mlwp_data_specs/checks/metadata/: __init__.py  coords.py
src/mlwp_data_specs/checks/traits/: __init__.py  _common.py  space.py  structure.py  time.py  uncertainty.py
src/mlwp_data_specs/loaders/: core.py
src/mlwp_data_specs/specs/: cli.py  reporting.py
src/mlwp_data_specs/specs/traits/: spatial_coordinate.py  time_coordinate.py  uncertainty.py
src/mlwp_data_specs/traits/: __init__.py  cli.py  properties.py  reporting.py  spatial_coordinate.py  specs.py  time_coordinate.py  uncertainty.py
tests/: test_api.py  test_cli.py  test_docs_generation.py  test_integration_harmonie.py  test_trait_space.py  test_trait_time.py  test_trait_uncertainty.py
