[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwp-data-specs"
version = "0.1.0"
description = "Trait-based dataset validator with inline specs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "xarray>=2024.1.0",
  "loguru>=0.7.0",
  "rich>=13.0.0",
  "packaging>=24.0",
  "fsspec>=2024.2.0",
  "s3fs>=2024.2.0",
  "pytest>=9.0.3",
  "zarr>=3.1.6,<4",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.7.6",
]
test = [
  "numpy>=2.4.4",
  "pandas>=3.0.2",
]

[project.scripts]
"mlwp.validate_dataset_traits" = "mlwp_data_specs.specs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests requiring remote data",
]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
]
